--- a/SetReadAPI/pom.xml
+++ b/SetReadAPI/pom.xml
@@ -46,9 +46,10 @@
 	<build>
 		<plugins>
 			<plugin>
-                <groupId>com.google.cloud.tools</groupId>
-                <artifactId>appengine-maven-plugin</artifactId>
-            </plugin>
+        <groupId>com.google.appengine</groupId>
+        <artifactId>appengine-maven-plugin</artifactId>
+        <version>1.9.60</version>
+      </plugin>
 		</plugins>
 	</build>
 
