--- a/SetReadAPI/pom.xml
+++ b/SetReadAPI/pom.xml
@@ -54,6 +54,11 @@
         <artifactId>appengine-maven-plugin</artifactId>
         <version>1.9.60</version>
       </plugin>
+      <plugin>
+    <groupId>com.google.cloud.tools</groupId>
+    <artifactId>appengine-maven-plugin</artifactId>
+    <version>1.0.0</version>
+</plugin>
 		</plugins>
 	</build>
 
